<resources>
    <string name="app_name">Activity1</string>
    <string name="login">Login</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="judul2">judul2</string>
    <string name="tData">DATA ANDA</string>
    <string name="tuser">User</string>
    <string name="tvuser">ini user</string>
    <string name="tpw">Password</string>
    <string name="tvpw">ini pw </string>
    <string name="label2">Login Succes</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="Idaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="euser">Masukkan User</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Pass Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">EditData</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor</string>
</resources>